tests/parsing/smtlib/v2.6/errors/080_define-fun-rec_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/080_define-fun-rec_unclosed_1.smt2", line 2, character 33-34:
2 | (define-fun-rec foo () bool true _)
                                     ^
Error while parsing a recursive function definition,
      read the reserved word '_',
      but expected a closing parenthesis.
